@@ -6524,7 +6524,7 @@ lv=2
 dt=Text
 nm=far.MacroAdd
 ctime=3523354795
-mtime=3602278585
+mtime=3612862418
 <article>
 #_Id = far.MacroAdd (Area, Flags, AKey, SequenceText, Description, Callback)
 #_
@@ -6537,7 +6537,7 @@ mtime=3602278585
 #_  Callback:     function, or nil
 #_
 #_**Returns:**
-#_  Id:           light userdata (success), or nil (failure)
+#_  Id:           userdata (success), or nil (failure)
 #_                  used in Callback and `far.MacroDelete`
 #_
 #_**Far API used:**
@@ -6602,12 +6602,12 @@ lv=2
 dt=Text
 nm=far.MacroDelete
 ctime=3523354806
-mtime=3577031249
+mtime=3612862428
 <article>
 #_result = far.MacroDelete (Id)
 #_
 #_**Parameters:**
-#_  Id:      light userdata (value returned by `far.MacroAdd`)
+#_  Id:      userdata (value returned by `far.MacroAdd`)
 #_
 #_**Returns:**
 #_  result:  boolean
